spacing fix

--- a/sass/_partials/_layout_1_4.scss
+++ b/sass/_partials/_layout_1_4.scss
@@ -29,6 +29,7 @@
   .featured-image{
     height: 200px;
     overflow: hidden;
+    margin-bottom: 5px;
     img{
       border-radius: 8px 8px 0 0;
       width: 100%;
@@ -62,7 +63,7 @@
     font-size: 0.9rem;
     color: #444;
     text-align: center;
-    padding: 0.5rem;
+    padding: 1rem;
   }
 } // style-1-2
 
@@ -98,6 +99,7 @@
   .featured-image{
     height: 100px;
     overflow: hidden;
+    margin-bottom: 5px;
     img{
       border-radius: 8px 8px 0 0;
       width: 100%;
@@ -109,7 +111,7 @@
 
   .post-title{
     font-size: 0.93rem;
-    font-weight: 600;
+    font-weight: 700;
     text-align: center;
     padding: 0.5rem 0.5rem 0.5rem 0.5rem;
     color: #333;
